tests/parser-test-files/bad-files/parse-body.1.coal
;; BAD: Parse Expression
(package test-package)

(define x (progn))
